--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "./node_modules/typescript/bin/tsc -w",
     "build": "npm run lint && ./node_modules/typescript/bin/tsc",
     "lint": "./node_modules/tslint/bin/tslint -p tsconfig.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
